bk_ida/gobmkida/c2/get_saved_worms
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/get_saved_worms/src/engine/move_reasons.c:1895:44: error: use of undeclared identifier 'dword_9E8088'
if ( ( unsigned __int8)( *v9 - 1) <= 1u && dword_9E8088[v10 / 4] == origin ) 
                                           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/get_saved_worms/src/obj/1/move_reasons.o] Error 1
